feat: async file ingestion and pass SonarQube quality gate